# maemo-launcher

./: ChangeLog  README  configure.ac
client/: Makefile.am  client.c
debian/: changelog  control  copyright  init.d  maemo-launcher.Xsession  maemo-launcher.Xsession-restart  maemo-launcher.init  maemo-launcher.install  maemo-launcher.postinst  maemo-launcher.prerm  rules
launcher/: Makefile.am  booster.c  booster.h  booster_api.h  booster_cpp.c  booster_cpp.cpp  booster_gtk.c  booster_gtk.h  booster_null.c  booster_qt.c  comm_dbus.c  comm_msg.c  comm_msg.h  invokelib.c  invokelib.h  invoker.c  launcher.c  prog.c  prog.h  report.c  report.h  summoner.c  test_lib.c  test_lib.h  test_msg.c  test_msg_perf.c
